# Aspose.Slides-FOSS-for-Python

./: .gitignore  LICENSE  README.md  agents.md  pyproject.toml
aspose/slides_foss/: AdjustValue.py  AdjustValueCollection.py  AutoShape.py  Background.py  BackgroundType.py  BaseHandoutNotesSlideHeaderFooterManager.py  BasePortionFormat.py  BaseShapeLock.py  BaseSlide.py  BevelPresetType.py  BulletFormat.py  BulletType.py  Camera.py  CameraPresetType.py  Cell.py  CellCollection.py  CellFormat.py  ColorFormat.py  ColorType.py  Column.py  ColumnCollection.py  ColumnFormat.py  Comment.py  CommentAuthor.py  CommentAuthorCollection.py  CommentCollection.py  Connector.py  DocumentProperties.py  EffectFormat.py  FillBlendMode.py  FillFormat.py  FillType.py  FontAlignment.py  FontData.py  Fonts.py  GeometryShape.py  GlobalLayoutSlideCollection.py  GradientDirection.py  GradientFormat.py  GradientShape.py  (+171 more)
aspose/slides_foss/_internal/: __init__.py  background_effective.py  base_collection.py
aspose/slides_foss/animation/: AfterAnimationType.py  AnimateTextType.py  AnimationTimeLine.py  Behavior.py  BehaviorAccumulateType.py  BehaviorAdditiveType.py  BehaviorCollection.py  BehaviorFactory.py  BehaviorProperty.py  BehaviorPropertyCollection.py  BuildType.py  ColorDirection.py  ColorEffect.py  ColorOffset.py  ColorSpace.py  CommandEffect.py  CommandEffectType.py  Effect.py  EffectChartMajorGroupingType.py  EffectChartMinorGroupingType.py  EffectFillType.py  EffectPresetClassType.py  EffectRestartType.py  EffectSubtype.py  EffectTriggerType.py  EffectType.py  FilterEffect.py  FilterEffectRevealType.py  FilterEffectSubtype.py  FilterEffectType.py  IBehavior.py  IBehaviorCollection.py  IBehaviorFactory.py  IBehaviorProperty.py  IBehaviorPropertyCollection.py  IColorEffect.py  IColorOffset.py  ICommandEffect.py  IEffect.py  IFilterEffect.py  (+35 more)
aspose/slides_foss/charts/: AxesManager.py  Axis.py  AxisPositionType.py  BaseChartValue.py  BubbleSizeRepresentationType.py  CategoryAxisType.py  Chart.py  ChartCategory.py  ChartCategoryCollection.py  ChartData.py  ChartDataCell.py  ChartDataPoint.py  ChartDataPointCollection.py  ChartDataSourceType.py  ChartDataWorkbook.py  ChartDataWorksheet.py  ChartLinesFormat.py  ChartPlotArea.py  ChartPortionFormat.py  ChartSeries.py  ChartSeriesCollection.py  ChartSeriesGroup.py  ChartSeriesGroupCollection.py  ChartSeriesReadonlyCollection.py  ChartTextFormat.py  ChartTitle.py  ChartType.py  ChartWall.py  CombinableSeriesTypesGroup.py  CrossesType.py  (+90 more)
examples/: test_bullet_format.py  test_comments.py  test_connector.py  test_document_properties.py  test_effect_format.py  test_fill_format.py  test_images.py  test_line_format.py  test_master_layout_slides.py  test_notes_slide.py  test_picture_frame.py  test_presentation.py  test_shapes.py  test_slides.py  test_table.py  test_text.py  test_text_formatting.py  test_text_frame_format.py  test_threed_format.py
tests/: conftest.py  test_animation.py  test_axis_formatting.py  test_background.py  test_bubble_scatter.py  test_chart_markers.py  test_chart_plot_area.py  test_charts.py  test_comments.py  test_connector.py  test_document_properties.py  test_effect_format.py  test_error_bars.py  test_fill_format.py  test_group_shape.py  test_images.py  test_line_format.py  test_notes_slide.py  test_presentation.py  test_shapes.py  test_slides.py  test_table.py  test_text.py  test_text_formatting.py  test_theme.py  test_threed_format.py  test_transitions.py  test_xlsx_package.py
tests/test_data/: Presentation.pptx
(+152 files in other folders)
