[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aspose-slides-foss"
version = "26.3.0"
description = "Official open-source Python library by Aspose.Slides for creating, reading, and editing PowerPoint (.pptx) presentations. Designed for developers and AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aspose" },
]
keywords = [
    "powerpoint",
    "pptx",
    "presentation",
    "slides",
    "aspose",
    "office",
    "openxml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/aspose-slides-foss/Aspose.Slides-FOSS-for-Python"
Repository = "https://github.com/aspose-slides-foss/Aspose.Slides-FOSS-for-Python"
Issues = "https://github.com/aspose-slides-foss/Aspose.Slides-FOSS-for-Python/issues"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
